k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipeline-project

spec:
  replicas: 1

  selector:
    matchLabels:
      app: pipeline-project

  template:
    metadata:
      labels:
        app: pipeline-project

    spec:
      containers:
        - name: pipeline-project
          image: ghcr.io/nayaraalvesdias/pipeline-project:latest

          ports:
            - containerPort: 8080
