k8s/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: pipeline-project

spec:
  selector:
    app: pipeline-project

  ports:
    - port: 80
      targetPort: 8080

  type: ClusterIP
